...
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="Please login or register"
            android:textAlignment="center"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:labelFor="@+id/username_text"
            android:text="username"/>

        <EditText
            android:id="@+id/username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:labelFor="@+id/password_text"
            android:text="password"/>

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            android:layout_marginRight="16dp"
            android:inputType="textPassword"
            android:singleLine="true"
            />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="login"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="exit"/>

        <Button
            android:id="@+id/new_user_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="New user"/>
...
