<resources>
    <string name="app_name">Where is my car</string>

    <string name="parking_time_label">Time</string>
    <string name="parking_note_hint">Take a note here.</string>
    <string name="parking_note_label">Note</string>
    <string name="parking_picture_label">Pictures</string>
    <string name="parking_picture_hint">Take pictures here.</string>
    <string name="location_label">Location</string>
    <string name="no_GPS_toast">Location service unavailable.\nLocation cannot be recorded.</string>
    <string name="network_not_enabled">Network unavailable.\nDo you want to connect to Internet?</string>
    <string name="open_network_settings">Go to Network Setting</string>
    <string name="gps_not_enabled">Location unavailable.\nDo you want to open Location service?</string>
    <string name="open_gps_settings">Go to Location Setting</string>
    <string name="Cancel">Cancel</string>

    <string name="new_parking">New Parking</string>
    <string name="delete_parking">Delete Parking</string>
    <string name="update_parking">Update Parking</string>
    <string name="title_activity_maps">Map</string>
    <string name="account">Account</string>

</resources>
