<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/update_button"
        android:icon="@drawable/ic_update_parking"
        android:title="@string/update_parking"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/delete_button"
        android:icon="@drawable/ic_delete_parking"
        android:title="@string/delete_parking"
        app:showAsAction="ifRoom|withText"/>

</menu>